--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,13 @@
     <title>AirPod Pro</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Apple</h1>
+        <div class="links">
+            <a href="#">Home</a>
+            <a href="#">Livraison</a>
+            <a href="#">Contact</a>
+        </div>
+    </header>
 </body>
 </html>
