update html and Css

--- a/index.html
+++ b/index.html
@@ -4,16 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./image/icone.ico" type="image/x-icon">
     <title>AirPod Pro</title>
 </head>
 <body>
     <header>
-        <h1>Apple</h1>
-        <div class="links">
-            <a href="#">Home</a>
-            <a href="#">Livraison</a>
-            <a href="#">Contact</a>
-        </div>
+        <img src="./image/logo (1).png" alt="logo">
     </header>
+    <div class="heroheader">
+        <img src="./image/header.png" alt="header">
+        <h3>AirPods Pro</h3>
+        <p>A new <span>U1 Chip</span> enables <span>Find My with</span></p>
+        <p><span>Precision Finding</span>for your cause so you</p>
+        <p>can exactly locate it you can also use</p>
+        <p>Find My proximity view it you lose</p>
+        <p>track of you AirPods Pro</p>
+    </div>
+    <div class="miniheader">
+        <img src="./image/logo (3).png" alt="AirPod">
+        <div class="detaille">
+            <h3>AirPods Pro</h3>
+            <div class="colors">
+                <div class="color1"></div>
+                <div class="color2"></div>
+                <div class="color3"></div>
+            </div>
+            <p>$350</p>
+            <button>Add To Card</button>
+        </div>
+    </div>
+    <div class="boitier">
+        <img src="./image/logo (6).png" alt="boitier">
+        <div class="detaille1">
+            <h3>Connect AirPods Pro.</h3>
+            <p>Open case and hold near device for</p>
+            <p>onscreen setup. Apple devices signed</p>
+            <p>in to ICloud then pair automatically</p>
+        </div>
+    </div>
+    <div class="tips">
+        <img src="./image/logo (4).png" alt="tips">
+        <div class="detaille2">
+            <h3>Changing ear tips</h3>
+            <p>Pull firmy to remove tip. To attach tip, align</p>
+            <p>it, then puch until it clicks. For more </p>
+            <p>tipe size, see inside box.</p>
+        </div>
+    </div>
+    <div class="phone">
+        <img src="./image/logo (7).png" alt="phone">
+        <div class="detaille3">
+            <h3>Noise Control in Control Center</h3>
+            <p>Touch and hold to see Noise Control</p>
+            <p>options</p>
+        </div>
+    </div>
 </body>
 </html>
