--- a/index.html
+++ b/index.html
@@ -59,5 +59,16 @@
             <p>options</p>
         </div>
     </div>
+    <footer>
+        <div class="links">
+            <a href="#"><i class='bx bxl-instagram'></i></a>
+            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="#"><i class='bx bxl-meta' ></i></a>
+        </div>
+        <img src="./image/logo (5).png" alt="footer">
+        <div class="security">
+            <p>Lorem ipsum dolor sit amet c</p>
+        </div>
+    </footer>
 </body>
 </html>
