--- a/index.html
+++ b/index.html
@@ -60,13 +60,8 @@
         </div>
     </div>
     <footer>
-        <div class="links">
-            <a href="#"><i class='bx bxl-instagram'></i></a>
-            <a href="#"><i class='bx bxl-twitter' ></i></a>
-            <a href="#"><i class='bx bxl-meta' ></i></a>
-        </div>
         <img src="./image/logo (5).png" alt="footer">
-        <p>Lorem ipsum dolor sit amet c</p>
+        <p>Conding by Anelka MD   <a href="#">Github</a></p>
     </footer>
 </body>
 </html>
