--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <img src="./image/logo (1).png" alt="logo">
     </header>
-    <div class="heroheader">
+    <div class="heroheader reveils">
         <img src="./image/header.png" alt="header">
         <h3>AirPods Pro</h3>
         <p>A new <span>U1 Chip</span> enables <span>Find My with</span></p>
@@ -20,7 +20,7 @@
         <p>Find My proximity view it you lose</p>
         <p>track of you AirPods Pro</p>
     </div>
-    <div class="miniheader">
+    <div class="miniheader reveils">
         <img src="./image/logo (3).png" alt="AirPod">
         <div class="detaille">
             <h3>AirPods Pro</h3>
@@ -33,7 +33,7 @@
             <button>Add To Card</button>
         </div>
     </div>
-    <div class="boitier">
+    <div class="boitier reveils">
         <img src="./image/logo (6).png" alt="boitier">
         <div class="detaille1">
             <h3>Connect AirPods Pro.</h3>
@@ -42,7 +42,7 @@
             <p>in to ICloud then pair automatically</p>
         </div>
     </div>
-    <div class="tips">
+    <div class="tips reveils">
         <img src="./image/logo (4).png" alt="tips">
         <div class="detaille2">
             <h3>Changing ear tips</h3>
@@ -51,7 +51,7 @@
             <p>tipe size, see inside box.</p>
         </div>
     </div>
-    <div class="phone">
+    <div class="phone reveils">
         <img src="./image/logo (7).png" alt="phone">
         <div class="detaille3">
             <h3>Noise Control in Control Center</h3>
