--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
         <img src="./image/logo (5).png" alt="footer">
         <p>Conding by Anelka MD <a href="#">Github</a></p>
     </footer>
+    <script src="./main.js"></script>
 </body>
 </html>
