--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <footer>
         <img src="./image/logo (5).png" alt="footer">
-        <p>Conding by Anelka MD <a href="#">Github</a></p>
+        <p>Conding by Anelka MD <a href="https://github.com/anelkamd">Github</a></p>
     </footer>
     <script src="./main.js"></script>
 </body>
