--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>AirPod Pro</title>
 </head>
 <body>
-    <header>
+    <header >
         <img src="./image/logo (1).png" alt="logo">
     </header>
     <div class="heroheader reveils">
@@ -59,7 +59,7 @@
             <p>options</p>
         </div>
     </div>
-    <footer>
+    <footer class="reveils">
         <img src="./image/logo (5).png" alt="footer">
         <p>Conding by Anelka MD <a href="https://github.com/anelkamd">Github</a></p>
     </footer>
