--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header >
-        <img src="./image/logo (1).png" alt="logo">
+        <img src="./image/logo (1).png" alt="logo" class="reveils">
     </header>
     <div class="heroheader reveils">
         <img src="./image/header.png" alt="header">
@@ -61,7 +61,7 @@
     </div>
     <footer class="reveils">
         <img src="./image/logo (5).png" alt="footer">
-        <p>Conding by Anelka MD <a href="https://github.com/anelkamd">Github</a></p>
+        <p>Conding by Anelka MD <a href="https://github.com/anelkamd">Github <i class='bx bxl-github'></i></a></p>
     </footer>
     <script src="./main.js"></script>
 </body>
